
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.steven.tripcar.models.LoginFragment">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <ImageView
        android:id="@+id/logo"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginLeft="60dp"
        android:adjustViewBounds="false"
        android:cropToPadding="false"
        android:paddingTop="20dp"
        android:src="@mipmap/tripcarlogo" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="@string/Email" />

    <EditText
        android:id="@+id/Contrasenia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/Contraseña"
        />

    <Button
        android:id="@+id/ingresar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:text="@string/Aceptar"
        android:textColor="@android:color/background_light" />
    <Button
        android:id="@+id/registro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/colorPrimaryDark"
        android:textColor="@android:color/background_light"
        android:text="@string/Registrarse"
      />
</LinearLayout>

</ScrollView>
